update new write